# deep-biblio-tools

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.addition  CITATION-REPLACEMENT-FAILURE-REPORT.md  CLAUDE.md  DEEP-CODE-REVIEW-AND-CONTINUATION-PLAN.md  Dockerfile  Dockerfile.test  Makefile  README.md  SESSION-STATUS-REPORT.md  STATUS.md  SYSTEMATIC_FIX_PLAN.md  architecture.md  audit_regex.py  consolidation-summary.md  conversion_history.json  conversion_results.json  coverage.xml  docker-compose.test.yml  ecosystem.md  entries_without_authors.json  example_usage.sh  prompt_example  pyproject.toml  pytest.ini  readme-deep-biblio-tools.md  test-results.xml  test_better_bibtex_conversion.py  urls_manual_add_needed.txt  urls_to_readd.txt  zotero_suspects.json
mcp-servers/deep-biblio/: README.md  add-missing-to-zotero.py  check_status.py  convert-with-zotero-api.py  generate-missing-report.py  get-zotero-info.py  missing-citations-report.md  pyproject.toml  test-arxiv-converter.py  test-latex-converter.py  work-session-summary.md
mcp-servers/deep-biblio/src/deep_biblio/: __init__.py  arxiv_converter.py  server.py
mcp-servers/deep-biblio/test_output/: Makefile  README.md  references.bib
mcp-servers/deep-biblio/tests/: test_server.py  test_zotero_workflow.py
mcp-servers/zotero/: README.md  pyproject.toml
mcp-servers/zotero/src/zotero/: __init__.py  server.py
tools/biblio-assistant/: README.md  pyproject.toml
tools/biblio-assistant/src/biblio_assistant/: __init__.py  cli.py
tools/biblio-assistant/src/biblio_assistant/api/: __init__.py  conversion.py  processing.py  review.py  validation.py
tools/biblio-assistant/src/biblio_assistant/core/: __init__.py  app.py  server.py
tools/biblio-assistant/src/biblio_assistant/templates/: base.html  index.html
tools/biblio-assistant/src/biblio_assistant/utils/: __init__.py  config.py
tools/biblio-assistant/src/biblio_assistant/web/: __init__.py  routes.py
tools/biblio-validator/: README.md  pyproject.toml
tools/biblio-validator/src/biblio_validator/: __init__.py  cli.py
tools/biblio-validator/src/biblio_validator/core/: __init__.py  matcher.py  validator.py
tools/biblio-validator/src/biblio_validator/models/: __init__.py  bibliography.py  citation.py
tools/biblio-validator/src/biblio_validator/utils/: __init__.py  cache.py  config.py  parsers.py  report.py
tools/biblio-validator/src/biblio_validator/validators/: __init__.py  arxiv.py  base.py  crossref.py  pubmed.py
tools/format-converter/: README.md  pyproject.toml
tools/format-converter/src/format_converter/: __init__.py  cli.py
tools/format-converter/src/format_converter/converters/: __init__.py  bibtex_handler.py  latex_to_markdown.py  markdown_to_latex.py  pandoc_converter.py
tools/format-converter/src/format_converter/core/: __init__.py  converter.py
tools/format-converter/src/format_converter/utils/: __init__.py  config.py  document_analyzer.py
tools/literature-reviewer/: README.md  pyproject.toml
tools/literature-reviewer/src/literature_reviewer/: __init__.py  cli.py
tools/literature-reviewer/src/literature_reviewer/core/: __init__.py  reviewer.py  summarizer.py
tools/literature-reviewer/src/literature_reviewer/models/: __init__.py  summary.py
tools/literature-reviewer/src/literature_reviewer/processors/: __init__.py  academic_rephraser.py  ai_reviewer.py  ai_summarizer.py  content_preserving_rephraser.py  content_processor.py  section_based_summarizer.py
tools/literature-reviewer/src/literature_reviewer/utils/: __init__.py  config.py  reference_manager.py
tools/paper-processor/: README.md  academic_rephrasing.py  alternative-summarization-approach.md  compression-findings-final.md  compression-testing.md  create_academic_rephrase_with_citations.py  create_balanced_50percent_rephrase.py  demo_comprehensive_rephrasing.py  demo_rephrasing_prompt.py  drone-papers-compression-analysis.md  drones-analysis-report.md  drones-final-report-20250823-095754.md  drones-summary-report-20250823-095553.md  extract_references_from_html.py  extracted-references-analysis.md  final-recommendations.md  finetune_summarization.py  monitor_compression_drift.py  process-drones-batch-continue.sh  process-drones-batch.sh  pyproject.toml  rename_long_files.py  research-gaps-template.md  run-batch-summarization.sh  run-regression-test.sh  section-based-compression-results.md  setup_api_key.py  successful-summary-analysis.md  summarization-experiment-results.md  summarization-final-analysis.md  summarization-improvements-final.md  test-extract.md  test-random-paper.sh  test-single-paper-debug.sh  test-single-summary.sh  test-suite-recommendations.md  test-summary.md  test_academic_rephrase.py  test_direct_summary.py  test_rephrase_full_paper_gaps.py  (+2 more)
tools/paper-processor/extracted/: 2d-3d-fusion-approach-for-improved-point-cloud-segmentation-sciencedirect.md
tools/paper-processor/src/paper_processor/: __init__.py  cli.py
tools/paper-processor/src/paper_processor/core/: __init__.py  processor.py
tools/paper-processor/src/paper_processor/extractors/: __init__.py  base.py  html_extractor.py  latex_extractor.py  pdf_extractor.py  xml_extractor.py
tools/paper-processor/src/paper_processor/models/: __init__.py  paper.py
tools/paper-processor/src/paper_processor/utils/: __init__.py  config.py
tools/paper-processor/test_summaries/: bim-based-quantity-takeoff-current-state-and-future-opportunities-sciencedirect-summary.md
tools/paper-processor/tests/: comparison-20250823-091152.json  compression-baseline.json  run_tests.py  test_academic_rephrasing.py  test_compression_regression.py  test_unicode_fix.py
tools/paper-processor/tests/fixtures/: arxiv-artifacts.md  malformed-references.md  unicode-test.md
tools/quality-guardian/: README.md  pyproject.toml
tools/quality-guardian/src/quality_guardian/: __init__.py  cli.py
tools/quality-guardian/src/quality_guardian/analyzers/: __init__.py  readability_analyzer.py  structure_analyzer.py
tools/quality-guardian/src/quality_guardian/checkers/: __init__.py  (+3 more)
(+640 files in other folders)
