[project]
name = "zotero-mcp"
version = "0.1.0"
description = "MCP server for Zotero library sync and paper import"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.2",
    "pyzotero>=1.5.22",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]
